<resources>
    <string name="app_name">Smart Audio</string>
    <string name="app_short_name">Smart Audio</string>
    <string name="app_full_name">Qualcomm Smart Audio Platform Mobile App for Android</string>
    <string name="app_name_launch_screen">QCS40X\n Smart Audio</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="loading">LOADING&#8230;</string>
    <string name="unknown_upper_case">UNKNOWN</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="devices_in_group">Devices in Group</string>
    <string name="empty">EMPTY</string>
    <string name="no_music">NO MUSIC</string>
    <string name="no_source_list">No Source Selection</string>
    <string name="name_group_title">Group Name</string>
    <string name="editor_group_hint">Group Name</string>
    <string name="button_group_add_remove">ADD/REMOVE</string>
    <string name="view_term">VIEW TERMS</string>
    <string name="accept">ACCEPT</string>
    <string name="term_of_service_title">TERMS OF SERVICE</string>
    <string name="term_of_service_content">PLEASE NOTE:\n\nBY USING THIS RELEASE YOU ACCEPT THAT IT IS SUBJECT TO THE PRODUCT KIT LICENSE AGREEMENT THAT YOU HAVE ACCEPTED ELECTRONICALLY, A COPY OF WHICH IS AVAILABLE AT\n\nhttps://createpoint.qti.qualcomm.com/dashboard/pkla/license</string>
    <string name="please_accept">PLEASE ACCEPT OUR TERMS OF SERVICE</string>
    <string name="converting_saved_playlists">CONVERTING SAVED PLAYLISTS&#8230;</string>
    <string name="searching_for_speakers">Searching Speakers&#8230;</string>
    <string name="searching_for_configed_speakers">Searching configured Satellite Speakers&#8230;</string>
    <string name="please_wait">PLEASE WAIT&#8230;</string>
    <string name="no_wifi_connect_title">No WI-FI CONNECTION</string>
    <string name="no_wifi_connect_message">Please check that Wi-Fi is enabled in your device\'s settings and that it is currently connected to a Wi-Fi network.\n\nWaiting for Wi-Fi to become available.</string>
    <string name="wifi_setup">SETUP</string>
    <string name="avs_setup">AVS</string>
    <string name="setup_detail">Add a new speaker</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_detail">Manage your speaker\'s settings</string>
    <string name="services">SERVICES</string>
    <string name="services_details">AllPlay compatible music apps</string>
    <string name="about">ABOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wifi_onboarding">Wi-Fi Onboarding</string>
    <string name="avs_on_boarding_title">AVS On Boarding</string>
    <string name="avs_on_boarding_web_view_title">AVS On Boarding Web View</string>
    <string name="avs_on_boarded">AVS on boarded</string>
    <string name="avs_sign_out_title">Sign Out? </string>
    <string name="avs_sign_out_confirmation">"Are you sure you want to remove your AVS login information from this device?</string>
    <string name="avs_sign_out_alert_title">Reboot Required</string>
    <string name="avs_sign_out_alert_message">Please reboot your device to complete the sign out process.</string>
    <string name="iot_sys_device_list">IoT Sys Device List:</string>
    <string name="avs_sign_in">Sign in with Amazon</string>
    <string name="avs_intro">Your device includes access to Alexa.\nConnect your Amazon account to access personalized features.</string>
    <string name="avs_details">Alexa allows you to use your voice to play music and get news, sports scores, weather and more—all hands-free.\nAll you have to do is ask Alexa.</string>
    <string name="my_zones">MY ZONES</string>
    <string name="setup_zones">Set Up Zones</string>
    <string name="manage_zones">Manage Zones</string>
    <string name="no_zones_title">NO ZONES HAVE BEEN CREATED</string>
    <string name="no_zones_details">Zones let you save speakers and music together so you can quickly get your favorite music player where you want it.</string>
    <string name="network_tree_view">Network View</string>
    <string name="main_view_bar_title">HOME</string>
    <string name="what_is_playing">What\'s Playing</string>
    <string name="available_speakers">Available Speakers</string>
    <string name="speakers">Speakers</string>
    <string name="plus_more">&#160;+ %1$d more</string>
    <string name="pause_all">Pause All</string>
    <string name="empty_list_text">No speaker found</string>
    <string name="empty_list_detail_text">Make sure your speakers are plugged in and within Wi-Fi range.</string>
    <string name="scanning">Scanning&#160;</string>
    <string name="manually_scan">Scan manually</string>
    <string name="play_on">PLAY ON:</string>
    <string name="music">Music</string>
    <string name="play_all">play All</string>
    <string name="play_all_number">Play All (%1$d)</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="one_album">1 Album</string>
    <string name="number_of_albums">%1$d Albums</string>
    <string name="one_song">1 Song</string>
    <string name="number_of_songs">%1$d Songs</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="queue_title">QUEUE</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="save_as_playlist">Save as Playlist</string>
    <string name="clear_queue">Clear Queue</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="edit_playlist_name">Edit Playlist Name</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="clear_queue_upper">Clear Queue</string>
    <string name="save">SAVE</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="search_hint">Search for music on my device</string>
    <string name="no_search_results">No results found</string>
    <string name="edit_playlist_name_hint">New Playlist name</string>
    <string name="other_playlists">Other Playlists</string>
    <string name="input_source_selection">Input Sources</string>
    <string name="output_source_selection">Available Output Destinations</string>
    <string name="online_media_services_screen">Online Music Services</string>
    <string name="other_audio_sources">Other Audio Sources</string>
    <string name="aux_line_in">Aux / Line In</string>
    <string name="local_media_server">Local Media Server (DLNA)</string>
    <string name="online_media_server">Online Music Services</string>
    <string name="no_music_in_folder">You have no supported music files in this folder</string>
    <string name="no_music_in_device">You have no supported music files in this device</string>
    <string name="no_music_in_playlist">You have no supported music files in this playlist</string>
    <string name="no_playlist">You do not have any saved playlist</string>
    <string name="bottom_sheet_header">HOME</string>
    <string name="create_speaker_group">Create a group with other speakers</string>
    <string name="create_device_group">Create a group with other devices</string>
    <string name="edit_device_group">Edit device group</string>
    <string name="pair_bt_device">Pair Bluetooth device</string>
    <string name="manage_bt_devices">Manage Bluetooth devices</string>
    <string name="add_zigbee_device">Add a ZigBee device</string>
    <string name="manage_zigbee_device">Manage ZigBee devices</string>
    <string name="view_alphabetically">View alphabetically</string>
    <string name="view_by_type">View by type</string>
    <string name="view_network_map">View network map</string>
    <string name="view_about_page">About</string>
    <string name="view_settings_page">Settings</string>
    <string name="speaker_settings">Settings</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="update_available">Update Available</string>
    <string name="general">General</string>
    <string name="general_reset">Reset AllPlay SmartAudio</string>
    <string name="voice_control_setting">Voice Control</string>
    <string name="zigbee_setting">Zigbee settings</string>
    <string name="audio_setting">Audio settings</string>
    <string name="settings_bluetooth_title">Bluetooth</string>
    <string name="settings_bluetooth_devices">Bluetooth devices</string>
    <string name="voice_control_setting_microphone">Microphone</string>
    <string name="voice_control_qcs40x_voice">QCS40X Voice</string>
    <string name="voice_control_avs">Amazon Alexa</string>
    <string name="voice_control_google_assistant">Google Assistant</string>
    <string name="voice_control_microsoft">Microsoft Cortana</string>
    <string name="voice_control_setting_default">Default voice service</string>
    <string name="voice_ui_available_state">Enabled, listening...</string>
    <string name="voice_ui_enabled">Enabled, not onboarded</string>
    <string name="voice_ui_disabled">Disabled</string>
    <string name="voice_ui_not_linked">Not linked</string>
    <string name="voice_ui_avs_settings_title">AVS Settings</string>
    <string name="avs_setting_enabled">Amazon Alexa</string>
    <string name="avs_voice_setting_hot_word">"Alexa" hotword detection</string>
    <string name="avs_voice_setting_country">Country</string>
    <string name="avs_voice_setting_sign_out">Sign out</string>
    <string name="audio_control_mode">Audio mode</string>
    <string name="audio_control_treatment">Audio treatment</string>
    <string name="audio_control_gapless_playback">Gapless playback</string>
    <string name="audio_control_dolby">Dolby</string>
    <string name="audio_control_dolby_mode">Mode(Tap to change)</string>
    <string name="audio_control_dts">DTS VirtualX</string>
    <string name="audio_control_dts_mode">Mode(Tap to change)</string>
    <string name="audio_control_dialog_clarity">Dialog Clarity</string>
    <string name="audio_control_bass_boost">Bass boost</string>
    <string name="audio_control_equalizer">Equalizer</string>
    <string name="audio_control_reverb">Reverb</string>
    <string name="audio_control_reverb_preset">Preset</string>
    <string name="audio_control_trumpet">Trumpet Effect</string>
    <string name="audio_control_trumpet_virtualization">Trumpet Virtualization</string>
    <string name="audio_control_trumpet_preset">Trumpet Preset</string>
    <string name="audio_control_trumpet_gain">Trumpet Gain</string>
    <string name="audio_control_normalize">Normalize volumes</string>
    <string name="audio_control_lip_sync_delay">Lip sync delay</string>
    <string name="current_version">Current Version</string>
    <string name="wifi_on_boarding_step_sending_credentials">Sending credentials</string>
    <string name="wifi_on_boarding_step_connecting">Connecting</string>
    <string name="wifi_on_boarding_step_check_connection_status">Check connection status</string>
    <string name="wifi_on_boarding_step_join">Joining the network</string>
    <string name="wifi_on_boarding_step_disconnection">Gateway disconnection</string>
    <string name="addwifi_ssid_header">NETWORK SSID</string>
    <string name="addwifi_ssid_hint">Enter SSID</string>
    <string name="addwifi_ssid_security_header">SECURITY</string>
    <string name="addwifi_password_header">NETWORK PASSWORD</string>
</resources>